--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 group 'hexlet.code'
@@ -16,4 +17,11 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+application {
+    mainClassName = 'hexlet.code.App'
+}
+
+compileJava {
+    options.release = 17
 }
