--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'application'
+    id 'checkstyle'
 }
 
 group 'hexlet.code'
@@ -24,4 +25,8 @@ application {
 
 compileJava {
     options.release = 17
+}
+
+run {
+    standardInput = System.in
 }
